--- a/configure.in
+++ b/configure.in
@@ -41,10 +41,9 @@ AC_PROG_AWK
 
 dnl Check for dlopen support
 AC_LIBTOOL_DLOPEN
+AC_LIBTOOL_SETUP
 
-LIBTOOL_FLAGS=
-test "x$lt_cv_dlopen" != xno && LIBTOOL_FLAGS="--enable-dlopen"
-test "x$lt_cv_dlopen_self" = xyes && LIBTOOL_FLAGS="$LIBTOOL_FLAGS --enable-dlopen-self"
+LIBTOOL_FLAGS="$libtool_flags"
 AC_SUBST(LIBTOOL_FLAGS)
 
 AC_ARG_ENABLE(ltdl-install,
