--- a/configure.in
+++ b/configure.in
@@ -48,8 +48,9 @@ AC_SUBST(LIBTOOL_FLAGS)
 
 AC_ARG_ENABLE(ltdl-install,
 [  --disable-ltdl-install  do not install libltdl])
-if test x"$enable_ltdl_install" = xno; then
-  ac_configure_args="$ac_configure_args --enable-ltdl-install=no"
+if test x"${enable_ltdl_install+set}" != xset; then
+  enable_ltdl_install=yes
+  ac_configure_args="$ac_configure_args --enable-ltdl-install"
 fi
 AC_CONFIG_SUBDIRS(libltdl)
 
