* mdemo/Makefile.am (@LIBLTDL@): depend on ../libltdl/config.h

--- a/mdemo/Makefile.am
+++ b/mdemo/Makefile.am
@@ -20,12 +20,12 @@ bin_PROGRAMS = mdemo mdemo.static
 
 ## use @LIBLTDL@ because some broken makes do not accept macros in targets
 ## we can only do this because our LIBLTDL does not contain ${top_builddir}
-@LIBLTDL@: ../libtool ../libltdl/libtool \
+@LIBLTDL@: ../libtool ../libltdl/libtool ../libltdl/config.h \
     $(srcdir)/../libltdl/ltdl.c $(srcdir)/../libltdl/ltdl.h
 	(cd ../libltdl; $(MAKE) `echo $(LIBLTDL) | sed 's,.*\.\./libltdl/,,g'`)
 # Without the following line, the check may fail if libltdl/libtool is
 # removed after libltdl is configured
-../libltdl/libtool:
+../libltdl/libtool ../libltdl/config.h:
 
 # Create a version of mdemo that does dlopen.
 mdemo_SOURCES = main.c
