--- a/ltmain.in
+++ b/ltmain.in
@@ -927,10 +927,7 @@ compiler."
 	if test -n "$link_static_flag"; then
 	  compile_command="$compile_command $link_static_flag"
 	  finalize_command="$finalize_command $link_static_flag"
-	  # Some platforms do not support self-dlopening with static
-	  # linking.  Assume self-dlopening does not work in this case
-	  # till we figure out how to test it at configure time
-	  dlopen_self=no
+	  dlopen_self=$dlopen_self_static
 	fi
 	continue
 	;;
@@ -1058,10 +1055,7 @@ compiler."
 	if test -z "$pic_flag" && test -n "$link_static_flag"; then
 	  compile_command="$compile_command $link_static_flag"
 	  finalize_command="$finalize_command $link_static_flag"
-	  # Some platforms do not support self-dlopening with static
-	  # linking.  Assume self-dlopening does not work in this case
-	  # till we figure out how to test it at configure time
-	  dlopen_self=no
+	  dlopen_self=$dlopen_self_static
 	fi
 	continue
 	;;
