--- a/ltconfig.in
+++ b/ltconfig.in
@@ -2144,7 +2144,7 @@ else
   cat > conftest.$ac_ext <<EOF
 #line @LINENO@ "ltconfig"
 #include <$ac_hdr>
-int fnord() { return 0; }
+int fnord = 0;
 EOF
 ac_try="$ac_compile conftest.$ac_ext >/dev/null 2>conftest.out"
 { (eval echo configure:2269: \"$ac_try\") 1>&5; (eval $ac_try) 2>&5; }
