--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1897,9 +1897,9 @@ rmdir .libs 2>/dev/null
 echo "$ac_t$objdir" 1>&6
 
 if test "x$enable_dlopen" != xyes; then
-  enable_dlopen=no
-  enable_dlopen_self=no
-  enable_dlopen_self_static=no
+  enable_dlopen=unknown
+  enable_dlopen_self=unknown
+  enable_dlopen_self_static=unknown
 else
 if eval "test \"`echo '$''{'lt_cv_dlopen'+set}'`\" != set"; then
   lt_cv_dlopen=no lt_cv_dlopen_libs=
