* */configure.in: AC_SUBST(LIBTOOL_DEPS) * */Makefile.am $(OBJECTS): depend on libtool (libtool): rebuild automatically

--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -108,3 +108,7 @@ hc-libpath: $(hell_OBJECTS) $(hell_DEPENDENCIES)
 hc-minusL: $(hell_OBJECTS) $(hell_DEPENDENCIES)
 	@rm -f hc-minusL
 	$(CC) $(LDFLAGS) -o $@ $(hell_OBJECTS) -L./$(objdir) -lhello -lm
+
+$(OBJECTS): libtool
+libtool: $(LIBTOOL_DEPS)
+	$(SHELL) ./config.status --recheck
