--- a/ltmain.in
+++ b/ltmain.in
@@ -2446,11 +2446,12 @@ static const void *lt_preloaded_setup() {
 
 	  pic_flag_for_symtable=
           case "$host" in
-	  # compiling the symbol table file with pic_flag works around a 
-	  # FreeBSD bug that causes programs to crash when -lm is linked
-	  # before any other PIC object.  But we must not use pic_flag
-	  # when linking with -static.
-	  *-*-freebsd*)
+	  # compiling the symbol table file with pic_flag works around
+	  # a FreeBSD bug that causes programs to crash when -lm is
+	  # linked before any other PIC object.  But we must not use
+	  # pic_flag when linking with -static.  The problem exists in
+	  # FreeBSD 2.2.6 and is fixed in FreeBSD 3.1.
+	  *-*-freebsd2*|*-*-freebsd3.0*)
 	    case "$compile_command " in
 	    *" -static "*) ;;
 	    *) pic_flag_for_symtable=" $pic_flag -DPIC -DFREEBSD_WORKAROUND";;
