--- a/depdemo/configure.in
+++ b/depdemo/configure.in
@@ -7,9 +7,22 @@ AC_EXEEXT
 AM_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
 
+if ${CONFIG_SHELL} ./libtool --features | grep "enable static" >/dev/null; then
+  STATIC=-static
+else
+  STATIC=
+fi
+AC_SUBST(STATIC)
+
 AC_CHECK_HEADERS(math.h)
 
 AC_CHECK_LIBM
 
 dnl Output the makefile
-AC_OUTPUT(Makefile)
+AC_OUTPUT(
+Makefile
+l1/Makefile
+l2/Makefile
+l3/Makefile
+l4/Makefile
+)
