--- a/demo/configure.in
+++ b/demo/configure.in
@@ -5,7 +5,9 @@ AM_INIT_AUTOMAKE(hell,1.0)
 AC_PROG_CC
 AC_C_CONST
 AC_EXEEXT
+AC_LIBTOOL_DLOPEN
 AM_PROG_LIBTOOL
+AC_SUBST(LIBTOOL_DEPS)
 
 if ${CONFIG_SHELL} ./libtool --features | grep "enable static" >/dev/null; then
   STATIC=-static
