--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -2,30 +2,24 @@
 #
 AUTOMAKE_OPTIONS = no-dependencies foreign
 
-LTDL_VERSION = -version-info 1:1:1
-
 if INSTALL_LTDL
 include_HEADERS = ltdl.h
+lib_LTLIBRARIES = libltdl.la
 else
 noinst_HEADERS = ltdl.h
 endif
 
-noinst_LTLIBRARIES = libltdl.la
+if CONVENIENCE_LTDL
+noinst_LTLIBRARIES = libltdlc.la
+endif
 
 libltdl_la_SOURCES = ltdl.c
+libltdl_la_LDFLAGS = -version-info 1:1:1
 libltdl_la_LIBADD = $(LIBADD_DL)
 
-lib_LTLIBRARIES = @LIBLIBS@
-EXTRA_LTLIBRARIES =
+libltdlc_la_SOURCES = ltdl.c
+libltdlc_la_LIBADD = $(LIBADD_DL)
 
-@TOINST@/libltdl.la: $(libltdl_la_OBJECTS) $(libltdl_la_DEPENDENCIES)
-	@test -d $(TOINST) || mkdir $(TOINST)
-	$(LINK) -o $@ $(libltdl_la_OBJECTS) \
-		-rpath $(libdir) $(LTDL_VERSION) $(libltdl_la_LIBADD)
-
-distclean-local:
-	test -z $(TOINST) || rm -rf $(TOINST)
-
+$(OBJECTS): libtool
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status --recheck
-Makefile: libtool
