--- a/depdemo/configure.in
+++ b/depdemo/configure.in
@@ -5,6 +5,7 @@ AM_INIT_AUTOMAKE(depdemo,0.1)
 AC_PROG_CC
 AC_EXEEXT
 AM_PROG_LIBTOOL
+AC_SUBST(LIBTOOL_DEPS)
 
 if ${CONFIG_SHELL} ./libtool --features | grep "enable static" >/dev/null; then
   STATIC=-static
