--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,27 +2,29 @@
 
 AUTOMAKE_OPTIONS = gnits
 
-TESTS = demo-static.test demo-make.test demo-exec.test \
-	demo-inst.test demo-unst.test hardcode.test \
-	mdemo-static.test mdemo-make.test mdemo-exec.test \
-	mdemo-inst.test mdemo-unst.test \
-	cdemo-static.test cdemo-make.test cdemo-exec.test \
+TESTS = cdemo-static.test cdemo-make.test cdemo-exec.test \
+	demo-static.test demo-make.test demo-exec.test \
+	demo-inst.test demo-unst.test \
 	depdemo-static.test depdemo-make.test depdemo-exec.test \
 	depdemo-inst.test depdemo-unst.test \
-	demo-conf.test demo-make.test demo-exec.test \
-	demo-inst.test demo-unst.test hardcode.test \
-	mdemo-conf.test mdemo-make.test mdemo-exec.test \
+	mdemo-static.test mdemo-make.test mdemo-exec.test \
 	mdemo-inst.test mdemo-unst.test \
 	cdemo-conf.test cdemo-make.test cdemo-exec.test \
+	demo-conf.test demo-make.test demo-exec.test \
+	demo-inst.test demo-unst.test \
 	depdemo-conf.test depdemo-make.test depdemo-exec.test \
 	depdemo-inst.test depdemo-unst.test \
-	demo-shared.test demo-make.test demo-exec.test \
-	demo-inst.test demo-unst.test hardcode.test \
-	mdemo-shared.test mdemo-make.test mdemo-exec.test \
+	mdemo-conf.test mdemo-make.test mdemo-exec.test \
 	mdemo-inst.test mdemo-unst.test \
+	demo-nofast.test demo-make.test demo-exec.test \
+	demo-inst.test demo-unst.test \
 	cdemo-shared.test cdemo-make.test cdemo-exec.test \
+	demo-shared.test demo-make.test demo-exec.test demo-inst.test \
+	hardcode.test build-relink.test demo-unst.test \
 	depdemo-shared.test depdemo-make.test depdemo-exec.test \
 	depdemo-inst.test depdemo-unst.test \
+	mdemo-shared.test mdemo-make.test mdemo-exec.test \
+	mdemo-inst.test mdemo-unst.test \
 	link.test link-2.test nomode.test \
 	quote.test sh.test suffix.test
 
@@ -39,7 +41,8 @@ EXTRA_DIST = defs $(TESTS)
 
 # We need to remove any files that the above tests created.
 clean-local:
-	-test -f ../demo/Makefile && cd ../demo && $(MAKE) distclean
 	-test -f ../cdemo/Makefile && cd ../cdemo && $(MAKE) distclean
+	-test -f ../demo/Makefile && cd ../demo && $(MAKE) distclean
+	-test -f ../depdemo/Makefile && cd ../depdemo && $(MAKE) distclean
 	-test -f ../mdemo/Makefile && cd ../mdemo && $(MAKE) distclean
 	rm -rf _inst
