--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1637,8 +1637,8 @@ bsdi4*)
   finish_cmds='PATH="$PATH:/sbin" ldconfig $libdir'
   shlibpath_var=LD_LIBRARY_PATH
   deplibs_check_method='file_magic ELF 32-bit LSB shared object'
-  file_magic_cmd=file # /usr/bin/file ?
-  # file_magic_test_file=/lib/libc.so ?
+  file_magic_cmd=/usr/bin/file
+  file_magic_test_file=/shlib/libc.so
   sys_lib_search_path="/shlib /usr/lib /usr/local/lib"
   sys_lib_dlsearch_path="/shlib /usr/lib" # /usr/local/lib ?
   ;;
@@ -1669,7 +1669,7 @@ freebsd*)
     freebsd-elf*)
       deplibs_check_method='file_magic ELF [0-9][0-9]*-bit [LM]SB shared object'
       file_magic_cmd=/usr/bin/file
-      # file_magic_test_file=`echo /usr/lib/libc.so*` ?
+      file_magic_test_file=`echo /usr/lib/libc.so*`
       library_names_spec='${libname}${release}.so$versuffix ${libname}${release}.so $libname.so'
       need_version=no
       need_lib_prefix=no
